packages/cashc/test/compiler/ParseError/misspelled_covenant.cash
contract Test() {
    function covenant() {
        require(tx.verson == 2);
    }
}
